--- a/src/index.css
+++ b/src/index.css
@@ -120,3 +120,70 @@ body{
   border-radius: 12px;
   z-index: 1000;
 }
+@media screen and (max-width: 600px){
+  .modal{
+    width: 150px;
+    height: 200px;
+    margin: 0 auto;
+  }
+  .finish {
+    width: 150px;
+    height: 200px;
+    margin: 0 auto;
+  }
+  .containerModal {
+    padding-top: 10px;
+  }
+  .startBtn {
+    width: 70px;
+    height: 30px;
+    font-size: 12px;
+    margin-top: 20px;
+  }
+  .modalTitle {
+    text-shadow: none;
+    font-style: normal;
+    font-size: 20px;
+  }
+  .modalAsk{
+    font-size: 20px;
+  }
+  .game{
+    width: 200px;
+    height: 200px;
+    padding: 5px;
+  }
+  .game img{
+    width: 25px;
+    height: 25px;
+  }
+  .title{
+    text-shadow:none;
+    font-size: 20px;
+  }
+  .app {
+    margin: 0px;
+    padding: 10px;
+  }
+  .score {
+    position: absolute;
+    width: 70px;
+    top: 20px;
+    right: 10px;
+  }
+  .numbers {
+    font-size: 15px;
+  }
+  .score1 {
+    position: absolute;
+    width: 70px;
+    height: 60px;
+    top: 100px;
+    right: 10px;
+  }
+  .title_time {
+    font-size: 12px;
+  }
+
+
+}
